--- a/Organizer/organizer-menu.css
+++ b/Organizer/organizer-menu.css
@@ -1,3 +1,13 @@
+/* *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-image: url(do.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 40%vh;
+    width: 30%vw;
+} */
 .buttons{
     height: 10rem;
     width: 10rem;
@@ -13,13 +23,13 @@
 }
 
 body{
-    background-color: grey;
+    background-color:wh;
 }
 
 .welcome{
     font-size: 65px;
     font-weight: 630;
-    color:blue;
+    color:black;
     margin-bottom: 0;
     font-family: "Sharp Sans",Arial,sans-serif;
     line-height: 70px;
@@ -29,7 +39,7 @@ body{
 .user-choice{
     font-size: 50px;
     font-weight: 600;
-    color:blue;
+    color: black;
     margin-bottom: 0;
     font-family: "Sharp Sans",Arial,sans-serif;
     line-height: 65px;
