--- a/Organizer/updateProject/updateProject.css
+++ b/Organizer/updateProject/updateProject.css
@@ -1,9 +1,11 @@
 *{
     margin: 0;
-    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    background-color: darkgrey;
+    background-color: dimgrey;
+    
 }
+
 
 body{
     border-radius: 6px;
