--- a/Organizer/updateTask/updateTask.css
+++ b/Organizer/updateTask/updateTask.css
@@ -1,8 +1,9 @@
 *{
     margin: 0;
-    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    background-color: darkgrey;
+    background-color:thistle;
+    
 }
 
 body{
@@ -12,8 +13,6 @@ body{
     align-items: center;
     margin-top: 10%;
 }
-
-
 
 input{
     border-radius: 7px;
