--- a/Organizer/about.css
+++ b/Organizer/about.css
@@ -3,11 +3,11 @@
 }
 
 body{
-    border: 2px solid black;
-    border-radius: 6px;
+    /* border: 2px solid black;
+    border-radius: 6px; */
     width: 80rem;
     height: 60rem; 
-    background-color: yellowgreen;
+    background-color: black;
   
 }
 
